implemented iterations for alarm query